# TRJM

./: .env.example  .env.phase1.example  .env.phase2.example  .gitignore  CLAUDE.md  README.md  models.yaml
.claude/plans/: gleaming-waddling-piglet.md
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/files/: page.tsx
apps/web/src/app/glossary/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/translate/: page.tsx
apps/web/src/components/layout/: dashboard-layout.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/styles/: globals.css
deploy/: docker-compose.vllm.yml  docker-compose.yml
deploy/certs/: openssl.cnf
deploy/nginx/: nginx.conf
deploy/postgres/: init.sql
deploy/scripts/: generate-certs.sh
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
samples/: glossary.csv  test_text.txt
services/gateway/: Dockerfile  pyproject.toml  requirements.txt
services/gateway/eval/: __init__.py  metrics.py  runner.py
services/gateway/eval/test_cases/: glossary_tests.json  number_tests.json  rtl_tests.json  token_protection_tests.json
services/gateway/src/: __init__.py  main.py
services/gateway/src/api/: __init__.py  deps.py
services/gateway/src/api/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  security.py
services/gateway/src/api/routes/: __init__.py  admin.py  auth.py  files.py  glossary.py  history.py  translation.py
services/gateway/src/core/: __init__.py  config.py  logging.py  security.py
services/gateway/src/db/: __init__.py  models.py  session.py
services/gateway/src/llm/: __init__.py  factory.py  mock.py  openai.py  provider.py  vllm.py
services/gateway/src/services/: __init__.py
services/gateway/src/services/auth/: __init__.py  jwt.py  ldap.py
services/gateway/src/services/files/: __init__.py  docx.py  msg.py  parser.py  pdf.py  txt.py
services/gateway/src/services/glossary/: __init__.py
services/gateway/src/services/jobs/: __init__.py
services/gateway/src/services/translation/: __init__.py  pipeline.py  schemas.py
services/gateway/src/services/translation/agents/: __init__.py  post_processor.py  reviewer.py  router.py  translator.py
